--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,7 +20,7 @@ jobs:
         id: check
         run: |
           echo "::set-output name=is_merge::false"
-          if git log --merges -n 1 --pretty="%H" | grep -q ${{ github.sha }}; then
+          if git log -n 1 --pretty="%H" | grep -q ${{ github.sha }}; then
             echo "::set-output name=is_merge::true"
           fi
   build-push-to-ecr-then-update-infra-overlay:
