--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,7 +27,9 @@ jobs:
           if [ "$MERGE_COMMIT" = "${{ github.sha }}" ]; then
             echo "::set-output name=is_merge::true"
           fi
-          echo is_merge ${{ steps.check.outputs.is_merge }}
+      - name: Print is_merge
+        run: |
+          echo "is_merge: ${{ needs.check.outputs.is_merge }}"
   build-push-to-ecr-then-update-infra-overlay:
     if: ${{ needs.check.outputs.is_merge == 'false' }}
     runs-on: ubuntu-latest
