--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,17 +19,17 @@ jobs:
       - name: Check if commit is a merge
         id: check
         run: |
-          echo "::set-output name=is_merge::false"
+          echo "is_merge=false" >> $GITHUB_OUTPUT
           echo "is_merge has been set to: ${{ steps.check.outputs.is_merge }}"
           MERGE_COMMIT=$(git log --merges -n 1 --pretty="%H")
           echo "Merge commit: $MERGE_COMMIT"
           echo ${{ github.sha }}
           if [ "$MERGE_COMMIT" = "${{ github.sha }}" ]; then
-            echo "::set-output name=is_merge::true"
+            echo "is_merge=true" >> $GITHUB_OUTPUT
           fi
       - name: Print is_merge
         run: |
-          echo "is_merge: ${{ needs.check.outputs.is_merge }}"
+          echo "is_merge: ${{ steps.check.outputs.is_merge }}"
   build-push-to-ecr-then-update-infra-overlay:
     if: ${{ needs.check.outputs.is_merge == 'false' }}
     runs-on: ubuntu-latest
