--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,6 +7,7 @@ on:
 
 env: 
   REPOSITORY_NAME: "pull-request-vote"
+  GH_TOKEN: ${{ github.token }}
 
 jobs:
   build-push-to-ecr-then-update-infra-overlay:
